--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,10 +1,12 @@
 .hero {
   background-image: url(../../assets/images/bg/bg-5.jpg);
   background-size: cover;
+  height: calc(100vh - 110px);
 
   &__wrapper {
     background-color: rgba(255, 255, 255, 0.9);
-    padding: 25px 0;
+    height: 100%;
+    padding: 25px 0 0;
     display: flex;
     align-items: center;
   }
