--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -19,7 +19,6 @@
     &-cards {
       display: flex;
       justify-content: center;
-      flex-wrap: wrap;
       gap: 25px;
       width: 100%;
     }
@@ -47,8 +46,42 @@
 
 @media (max-width: 992px) {
   .hero {
+    &__img {
+      img {
+        width: 80%;
+      }
+    }
+    &__content {
+      &-cards {
+        gap: 15px;
+        width: 100%;
+      }
+    }
+    &__card img {
+      width: 80%;
+      margin: 0 auto;
+    }
+  }
+}
+@media (max-width: 768px) {
+  .hero {
     &__wrapper {
       flex-direction: column;
+    }
+    &__content {
+      &-cards {
+        flex-wrap: wrap;
+      }
+    }
+    &__card {
+      width: 150px;
+      &-wrapper {
+        padding: 10px;
+      }
+      img {
+        width: 60%;
+        margin: 0 auto;
+      }
     }
   }
 }
