--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
 $main-font: "Montserrat", sans-serif;
+$second-font: "Cormorant Upright", serif;
 $main-black: #333;
 $main-gold: #c19d56;
 $main-gold-2: rgb(193, 157, 86);
