--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import "./styles/variables";
 @import "./styles/global";
 @import "./styles/components/header";
+@import "./styles/components/about";
 @import "./styles/pages/home";
