--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,4 +1,7 @@
 .header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
   background: #fff;
   padding: 15px 0;
   box-shadow: rgba(193, 157, 86, 0.12) 0px 10px 15px -3px, rgba(193, 157, 86, 0.05) 0px 4px 6px -2px;
