--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,12 +1,12 @@
 .hero {
-  background-image: url(../../assets/images/bg/bg-5.jpg);
+  background-image: url(../../../public/images/bg/bg-5.jpg);
   background-size: cover;
   height: calc(100vh - 110px);
+  padding: 80px 0 0;
 
   &__wrapper {
     background-color: rgba(255, 255, 255, 0.9);
     height: 100%;
-    padding: 25px 0 0;
     display: flex;
     align-items: center;
   }
@@ -16,6 +16,12 @@
   &__content {
     width: 70%;
     text-align: center;
+    &-title {
+      font-family: $second-font;
+      text-transform: capitalize;
+      font-size: 36px;
+      color: $main-gold;
+    }
     &-cards {
       display: flex;
       justify-content: center;
@@ -24,6 +30,8 @@
     }
   }
   &__card {
+    font-family: $second-font;
+    font-size: 22px;
     background-color: #fff;
     border-radius: 8px;
     height: 100%;
