--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -6,6 +6,7 @@
     height: 600px;
     align-items: center;
     box-shadow: 0 8px 32px 0 rgba(193, 157, 86, 0.2);
+    border-radius: 10px;
   }
   &__info {
     width: 60%;
@@ -83,4 +84,20 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: top center;
+}
+
+@media (max-width: 1024px) {
+  .about {
+    &__wrapper {
+      flex-direction: column;
+    }
+    &__info {
+      width: 100%;
+    }
+    &__carousel {
+      width: 100%;
+      height: 80%;
+    }
+  }
 }
