--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -7,6 +7,7 @@
   box-shadow: rgba(193, 157, 86, 0.12) 0px 10px 15px -3px, rgba(193, 157, 86, 0.05) 0px 4px 6px -2px;
   &__wrapper {
     width: 90vw;
+    max-width: 1220px;
     margin: 0 auto;
     display: flex;
     align-items: center;
