--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -59,6 +59,10 @@
       font-size: 22px;
       text-align: justify;
       margin: 6px 0;
+      strong {
+        color: $main-gold;
+        font-size: 24px;
+      }
     }
   }
   &__carousel {
