--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,12 +1,12 @@
 .about {
   // background-color: #ffedc8;
-  padding-top: 50px;
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 50px 0;
   &__wrapper {
     display: flex;
     height: 600px;
     align-items: center;
-    box-shadow: 0 8px 32px 0 rgba(193, 157, 86, 0.2);
-    border-radius: 10px;
+    // box-shadow: 0 8px 32px 0 rgba(193, 157, 86, 0.2);
   }
   &__info {
     width: 60%;
@@ -82,8 +82,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
-  overflow: hidden;
 }
 
 .swiper-slide img {
@@ -92,12 +90,14 @@
   height: 100%;
   object-fit: cover;
   object-position: top center;
+  overflow: hidden;
 }
 
 @media (max-width: 1024px) {
   .about {
     &__wrapper {
       flex-direction: column;
+      height: auto;
     }
     &__info {
       width: 100%;
@@ -106,5 +106,8 @@
       width: 100%;
       height: 80%;
     }
+  }
+  .swiper-slide img {
+    height: 80vh;
   }
 }
