--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -36,18 +36,22 @@
     border-radius: 8px;
     height: 100%;
     overflow: hidden;
-    // box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    color: $main-gold;
+    font-weight: 700;
     &-wrapper {
       padding: 15px;
       background: rgba(0, 0, 0, 0.05);
-      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
       backdrop-filter: blur(11.5px);
       -webkit-backdrop-filter: blur(11.5px);
       border-radius: 10px;
       border: 1px solid rgba(255, 255, 255, 0.18);
+      transition: 0.4s;
+      &:hover {
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
+      }
     }
   }
 }
