--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,9 +2,9 @@
   position: fixed;
   z-index: 2;
   width: 100%;
-  background: #fff;
+  // background: rgba(0, 0, 0, 0.1);
   padding: 15px 0;
-  box-shadow: rgba(193, 157, 86, 0.12) 0px 10px 15px -3px, rgba(193, 157, 86, 0.05) 0px 4px 6px -2px;
+  transition: 0.3s;
   &__wrapper {
     width: 90vw;
     max-width: 1220px;
@@ -28,7 +28,7 @@
       font-weight: 500;
     }
     &-link {
-      font-size: 15px;
+      font-size: 14px;
       border: 2px solid transparent;
       .active {
         border-bottom: 3px solid $main-gold;
@@ -65,6 +65,10 @@
     }
   }
 }
+.header.sticky {
+  background-color: #fff;
+  box-shadow: rgba(193, 157, 86, 0.12) 0px 10px 15px -3px, rgba(193, 157, 86, 0.05) 0px 4px 6px -2px;
+}
 .menu__nav {
   position: fixed;
   display: none;
@@ -72,11 +76,11 @@
   top: -15px;
   right: -105%;
   width: 100vw;
-  height: 100vh;
+  height: 105vh;
   transition: 0.4s linear;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1024px) {
   .header {
     &__logo {
       width: 40vw;
@@ -96,6 +100,8 @@
     left: 0;
     bottom: 0;
     right: 0;
+    width: 100%;
+    height: 100vh;
     background-color: rgba(193, 157, 86, 0.12);
     display: none;
   }
