--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,14 +1,17 @@
 .hero {
-  background-image: url(../../../public/images/bg/bg-5.jpg);
+  background-image: url(../../../public/images/bg/bg-2.jpg);
   background-size: cover;
-  height: calc(100vh - 110px);
-  padding: 80px 0 0;
+  height: calc(100vh - 25px);
 
   &__wrapper {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.85);
     height: 100%;
     display: flex;
     align-items: center;
+    padding: 30px 0 0;
+  }
+  &__inner {
+    display: flex;
   }
   &__img {
     padding-left: 5%;
@@ -58,7 +61,7 @@
 
 @media (max-width: 992px) {
   .hero {
-    padding: 70px 0 0;
+    // padding: 70px 0 0;
     &__img {
       img {
         width: 80%;
