--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -61,7 +61,10 @@
 
 @media (max-width: 992px) {
   .hero {
-    // padding: 70px 0 0;
+    height: 66vh;
+    &__wrapper {
+      padding: 140px 0 0;
+    }
     &__img {
       img {
         width: 80%;
