--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -85,11 +85,22 @@
 @media (max-width: 768px) {
   .hero {
     &__wrapper {
+      padding: 60px 0 0;
+    }
+    &__inner {
       flex-direction: column;
+      align-items: center;
+      justify-content: start;
+    }
+    &__img img {
+      width: 60%;
     }
     &__content {
+      &-title {
+        font-size: 22px;
+      }
       &-cards {
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
       }
     }
     &__card {
@@ -100,6 +111,38 @@
       img {
         width: 60%;
         margin: 0 auto;
+      }
+    }
+  }
+}
+@media (max-width: 576px) {
+  .hero {
+    &__wrapper {
+      padding: 40px 0 0;
+    }
+    &__img {
+      padding-left: 0;
+      width: 40%;
+    }
+    &__content {
+      &-title {
+        font-size: 20px;
+      }
+      &-cards {
+        flex-wrap: nowrap;
+      }
+    }
+    &__card {
+      width: 80px;
+      &-wrapper {
+        padding: 10px;
+      }
+      img {
+        width: 60%;
+        margin: 0 auto;
+      }
+      p {
+        font-size: 14px;
       }
     }
   }
