cake baku section slider first look

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,4 +2,5 @@
 @import "./styles/global";
 @import "./styles/components/header";
 @import "./styles/components/about";
+@import "./styles/components/cake-baku";
 @import "./styles/pages/home";
