--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,6 +1,5 @@
 .about {
-  // background-color: #ffedc8;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: #fff;
   padding: 80px 0;
   &__wrapper {
     display: flex;
@@ -78,13 +77,13 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  // background: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.swiper-slide img {
+.about__carousel-img {
   display: block;
   width: 100%;
   height: 100%;
@@ -105,9 +104,9 @@
     &__carousel {
       width: 100%;
       height: 80%;
+      &-img {
+        height: 80vh;
+      }
     }
-  }
-  .swiper-slide img {
-    height: 80vh;
   }
 }
