--- a/src/styles/components/_cake-baku.scss
+++ b/src/styles/components/_cake-baku.scss
@@ -5,23 +5,44 @@
   &__wrapper {
     display: flex;
   }
-  &__slider {
-    width: 50%;
-    border-radius: 10px;
+  &__img {
+    position: relative;
+    z-index: 1;
+    // border-radius: 10px;
+    object-fit: cover;
     overflow: hidden;
-    &-item {
-      height: 70vh;
-      display: block;
-      width: 100%;
-      object-fit: cover;
-      object-position: top center;
-      overflow: hidden;
-      overflow: hidden;
+    height: 70vh;
+    display: block;
+    width: 100%;
+    object-fit: cover;
+    object-position: top center;
+    overflow: hidden;
+    &-pattern {
+      position: absolute;
+      top: -18px;
+      left: -24px;
+      z-index: 0;
+      width: 250px !important;
     }
+    &-alt {
+      position: absolute;
+      width: 50%;
+      bottom: -30px;
+      right: -50px;
+      z-index: 2;
+    }
+  }
+  &__picture {
+    position: relative;
+    width: 50%;
+    padding: 10px;
   }
   &__info {
     width: 50%;
     color: #fff;
+    padding-left: 60px;
+    display: flex;
+    flex-direction: column;
     &-title {
       display: flex;
       flex-direction: column;
@@ -32,12 +53,153 @@
       img {
         display: block;
         width: 40%;
-        margin-top: -55px;
+        margin-top: -40px;
       }
     }
     &-desc {
       font-family: $second-font;
-      font-size: 22px;
+      font-size: 24px;
+      text-align: justify;
+      padding-left: 10px;
+    }
+    &-btn {
+      position: relative;
+      top: 0;
+      right: 35px;
+      align-self: flex-end;
+      width: 250px;
+      height: 50px;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: none;
+      border: none;
+      a {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        font-size: 18px;
+        // height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(255, 255, 255, 0.2);
+        box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 30px;
+        padding: 17px;
+        letter-spacing: 1px;
+        text-decoration: none;
+        overflow: hidden;
+        color: #fff;
+        font-weight: 400px;
+        z-index: 1;
+        transition: 0.5s;
+        backdrop-filter: blur(55px);
+        &:hover {
+          letter-spacing: 3px;
+        }
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 50%;
+          height: 100%;
+          background: linear-gradient(to left, rgba(255, 255, 255, 0.3), transparent);
+          transform: skewX(45deg) translate(0);
+          transition: 0.5s;
+          filter: blur(0px);
+        }
+      }
+      &:hover a::before {
+        transform: skewX(45deg) translate(200px);
+      }
+      // &::before {
+      //   content: "";
+      //   position: absolute;
+      //   left: 50%;
+      //   transform: translatex(-50%);
+      //   bottom: -5px;
+      //   width: 30px;
+      //   height: 50px;
+      //   background: #fff;
+      //   border-radius: 10px;
+      //   transition: 0.5s;
+      //   transition-delay: 0.5;
+      // }
+      &:hover::before {
+        bottom: 0;
+        height: 50%;
+        width: 80%;
+        border-radius: 30px;
+      }
+      // &::after {
+      //   content: "";
+      //   position: absolute;
+      //   left: 50%;
+      //   transform: translatex(-50%);
+      //   top: -5px;
+      //   width: 30px;
+      //   height: 100%;
+      //   background: #fff;
+      //   border-radius: 10px;
+      //   transition: 0.5s;
+      //   transition-delay: 0.5;
+      // }
+      &:hover::after {
+        top: 0;
+        height: 100%;
+        width: 110%;
+        border-radius: 30px;
+        left: 55%;
+      }
+    }
+  }
+}
+@media (max-width: 1024px) {
+  .cake-baku {
+    &__wrapper {
+      flex-direction: column;
+    }
+    &__picture {
+      margin: 0 auto;
+      width: 80%;
+    }
+    &__img {
+      height: 50vh;
+    }
+    &__info {
+      width: 100%;
+      padding-top: 15px;
+      padding-left: 0;
+      &-btn {
+        align-self: center;
+      }
+      &-desc {
+        padding-left: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .cake-baku {
+    &__wrapper {
+      flex-direction: column;
+    }
+    &__picture {
+      margin: 0 auto;
+      width: 80%;
+    }
+    &__img {
+      height: 40vh;
+      &-alt {
+        right: -25px;
+      }
     }
   }
 }
