cake school section first look

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,4 +3,5 @@
 @import "./styles/components/header";
 @import "./styles/components/about";
 @import "./styles/components/cake-baku";
+@import "./styles/components/cake-school";
 @import "./styles/pages/home";
