--- a/src/styles/components/_cake-school.scss
+++ b/src/styles/components/_cake-school.scss
@@ -159,7 +159,7 @@
     &__info {
       width: 100%;
       padding-top: 15px;
-      padding-left: 0;
+      padding-right: 0;
       &-btn {
         align-self: center;
       }
