companies img style changed

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,4 +5,5 @@
 @import "./styles/components/cake-baku";
 @import "./styles/components/cake-school";
 @import "./styles/components/catering";
+@import "./styles/components/companies";
 @import "./styles/pages/home";
