--- a/src/styles/components/_companies.scss
+++ b/src/styles/components/_companies.scss
@@ -3,6 +3,9 @@
   &__carousel {
     width: 100%;
     height: 100%;
+    .swiper-wrapper {
+      align-items: center;
+    }
     &-img {
       width: 150px;
     }
