companies title ready

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -6,9 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $main-black;
-  background: #ece9e6;
-  background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
-  background: linear-gradient(to right, #ffffff, #ece9e6);
+  // background: #ece9e6;
+  // background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
+  // background: linear-gradient(to right, #ffffff, #ece9e6);
 }
 
 code {
