--- a/src/styles/components/_companies.scss
+++ b/src/styles/components/_companies.scss
@@ -1,5 +1,15 @@
 .companies {
-  // background-color: red;
+  &__title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: $second-font;
+    font-size: 2.3vw;
+    img {
+      width: 30%;
+      margin-top: -6%;
+    }
+  }
   &__carousel {
     width: 100%;
     height: 100%;
