footer img foirst look

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,9 @@
 @import "./styles/variables";
 @import "./styles/global";
+
+//components
 @import "./styles/components/header";
+@import "./styles/components/footer";
 @import "./styles/components/about";
 @import "./styles/components/cake-baku";
 @import "./styles/components/cake-school";
