footer img first look

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -4,6 +4,7 @@
   background-color: #7f007f;
   background-image: url(../../../public/images/pattern03.png);
   background-position: bottom center;
+  background-repeat: repeat-x;
   color: #fff;
   &__header {
     display: flex;
