cake baku section hero slider first look

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,4 +9,7 @@
 @import "./styles/components/cake-school";
 @import "./styles/components/catering";
 @import "./styles/components/companies";
+
+// pages
 @import "./styles/pages/home";
+@import "./styles/pages/cakebaku";
