--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -56,8 +56,10 @@
     font-size: 18px;
     line-height: 30px;
     letter-spacing: 1.5px;
-    i {
+
+    svg {
       color: $main-gold;
+      margin-bottom: -4px;
     }
     span,
     a {
@@ -80,12 +82,12 @@
       align-items: center;
       transition: 0.3s;
       align-self: flex-start;
-      i {
+      svg {
         border: 1px solid transparent;
         border-radius: 50%;
         transition: 0.3s;
-        width: 40px;
-        height: 40px;
+        font-size: 25px;
+        padding: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -121,7 +123,7 @@
       &:hover span::after {
         visibility: visible;
       }
-      &:hover i {
+      &:hover svg {
         border: 1px solid $main-gold;
         color: $main-gold;
       }
