cake baku section hero slider first look

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -81,6 +81,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-position: center;
+  background-size: cover;
 }
 
 .about__carousel-img {
