--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -2,6 +2,26 @@
   background-image: url(../../../public/images/bg/bg-2.jpg);
   background-size: cover;
   height: calc(100vh - 25px);
+  position: relative;
+
+  &__video {
+    width: 100%;
+    &-wrapper {
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+      position: absolute;
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.85);
+      }
+    }
+  }
 
   &__wrapper {
     background-color: rgba(255, 255, 255, 0.85);
@@ -15,6 +35,7 @@
   }
   &__img {
     padding-left: 5%;
+    z-index: 100;
   }
   &__content {
     width: 70%;
