--- a/src/styles/pages/_cakebaku.scss
+++ b/src/styles/pages/_cakebaku.scss
@@ -82,4 +82,53 @@
       }
     }
   }
+  &__info {
+    width: 100%;
+    height: 100vh;
+    background-image: url(https://dolcino.qodeinteractive.com/wp-content/uploads/2018/11/h1-parallax-1-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: -20px;
+    display: flex;
+    // align-items: center;
+    justify-content: center;
+    &-wrapper {
+      text-align: center;
+      width: 50%;
+      margin: 0 auto;
+      padding: 50px 0 0;
+    }
+    &-title {
+      font-size: 6rem;
+      font-family: $second-font;
+      margin-bottom: 35px;
+      position: relative;
+      &::after {
+        content: "";
+        position: absolute;
+        width: 50%;
+        height: 3px;
+        bottom: 0;
+        left: 25%;
+        background-color: $main-gold;
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        bottom: -8px;
+        left: 50%;
+        background-color: $main-gold;
+        transform: rotate(45deg);
+      }
+    }
+    &-desc {
+      font-style: italic;
+      line-height: 22px;
+      letter-spacing: 2px;
+      font-size: 17px;
+      color: black;
+    }
+  }
 }
