--- a/src/styles/pages/_cakebaku.scss
+++ b/src/styles/pages/_cakebaku.scss
@@ -84,7 +84,7 @@
   }
   &__info {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 65px);
     background-image: url(https://dolcino.qodeinteractive.com/wp-content/uploads/2018/11/h1-parallax-1-1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
