--- a/src/styles/pages/_cakebaku.scss
+++ b/src/styles/pages/_cakebaku.scss
@@ -131,4 +131,52 @@
       color: black;
     }
   }
+  &__gallery {
+    &-inner {
+      display: grid;
+      grid-gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      grid-auto-rows: 200px;
+      grid-auto-flow: dense;
+      margin: 100px 0 120px;
+    }
+    &-item {
+      position: relative;
+      overflow: hidden;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        cursor: pointer;
+        transition: 0.5s;
+      }
+      &:nth-child(7n + 1) {
+        grid-column: span 2;
+        grid-row: span 2;
+      }
+    }
+    &-overlay {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(5px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: $main-gold;
+      font-size: 26px;
+      cursor: pointer;
+      transition: 0.5s ease;
+    }
+    &-item:hover &-overlay {
+      opacity: 1;
+    }
+    &-item:hover img {
+      transform: scale(1.05);
+    }
+  }
 }
