cakeschool hero first look

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,4 +13,5 @@
 // pages
 @import "./styles/pages/home";
 @import "./styles/pages/cakebaku";
+@import "./styles/pages/cakeschool";
 @import "./styles/pages/catering-page.scss";
