--- a/src/styles/pages/_cakeschool.scss
+++ b/src/styles/pages/_cakeschool.scss
@@ -25,4 +25,61 @@
       font-family: $second-font;
     }
   }
+  &__advantages {
+    padding: 100px 0;
+    &-header {
+      display: flex;
+      justify-content: center;
+    }
+    &-title {
+      display: inline-block;
+      position: relative;
+      font-size: 42px;
+      font-family: $second-font;
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: -20px;
+        left: 50%;
+        width: 20px;
+        height: 20px;
+        background-color: $main-gold;
+        transform: rotate(45deg);
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        left: 10%;
+        width: 80%;
+        height: 2px;
+        background-color: $main-gold;
+      }
+    }
+    &-items {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 25px;
+    }
+    &-item {
+      padding: 15px 35px;
+      width: 25%;
+      text-align: center;
+      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+      svg {
+        font-size: 36px;
+        color: $main-gold;
+      }
+      .advantages__item {
+        &-title {
+          font-size: 20px;
+          margin: 10px 0;
+        }
+        &-desc {
+          line-height: 25px;
+        }
+      }
+    }
+  }
 }
