--- a/src/styles/pages/_cakeschool.scss
+++ b/src/styles/pages/_cakeschool.scss
@@ -26,7 +26,7 @@
     }
   }
   &__advantages {
-    padding: 100px 0;
+    padding: 80px 0;
     &-header {
       display: flex;
       justify-content: center;
@@ -80,6 +80,67 @@
           line-height: 25px;
         }
       }
+    }
+  }
+  &__courses {
+    padding: 80px 0 0;
+    &-inner {
+      display: flex;
+      justify-content: space-between;
+    }
+    &-info {
+      width: 80%;
+      margin: 0 auto;
+      padding-top: 80px;
+      position: relative;
+      text-align: justify;
+      font-style: italic;
+      line-height: 25px;
+      &--bold {
+        font-weight: 700;
+      }
+    }
+    &-icon--left {
+      position: absolute;
+      font-size: 56px;
+      opacity: 0.5;
+      left: -10%;
+      top: 40px;
+    }
+    &-icon--right {
+      position: absolute;
+      font-size: 56px;
+      opacity: 0.5;
+      right: -10%;
+    }
+  }
+  &__course {
+    position: relative;
+    width: 30%;
+    height: 50vh;
+    &-img {
+      width: 100%;
+      height: 40vh;
+      object-fit: cover;
+      object-position: top;
+    }
+    &-info {
+      position: absolute;
+      width: 80%;
+      left: 5%;
+      bottom: 0;
+      padding: 15px;
+      background-color: #fff;
+      text-align: center;
+      box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    }
+    &-title {
+      margin: 0 0 10px;
+      letter-spacing: 1.2px;
+    }
+    &-desc {
+      margin: 0;
+      font-size: 14px;
     }
   }
 }
