--- a/src/styles/pages/_cakeschool.scss
+++ b/src/styles/pages/_cakeschool.scss
@@ -143,4 +143,43 @@
       font-size: 14px;
     }
   }
+  &__masterclass {
+    padding-top: 120px;
+    width: 100%;
+    // .swiper-wrapper {
+    //   width: 100%;
+    // }
+    .masterclass__course {
+      position: relative;
+      width: 100%;
+      height: 45vh;
+      &-img {
+        width: 100%;
+        height: 40vh;
+        object-fit: cover;
+        object-position: center;
+      }
+      &-info {
+        position: absolute;
+        width: 80%;
+        left: 5%;
+        bottom: 0;
+        padding: 15px;
+        background-color: #fff;
+        text-align: center;
+        box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+      }
+      &-title {
+        margin: 0 0 10px;
+        letter-spacing: 1.2px;
+      }
+      &-desc {
+        margin: 0;
+        font-size: 14px;
+      }
+    }
+  }
+  &__testimonials {
+    background-image: url(../../../public/images/cake-school/masterclass/testimonials-bg.jpg);
+  }
 }
