--- a/src/styles/pages/_cakeschool.scss
+++ b/src/styles/pages/_cakeschool.scss
@@ -180,7 +180,8 @@
     }
   }
   &__testimonials {
-    background-image: url(https://dolcino.qodeinteractive.com/wp-content/uploads/2018/10/p2-title-img.jpg);
+    background-image: url(../../../public/images/cake-school/reviews/reviews-bg.jpg);
+    background-attachment: fixed;
     margin: 80px 0 150px;
     padding: 20px 0;
     &-inner {
