--- a/src/styles/pages/_cakeschool.scss
+++ b/src/styles/pages/_cakeschool.scss
@@ -195,6 +195,9 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      .swiper-pagination-bullet-active {
+        background: rgb(188, 127, 4);
+      }
     }
     &-title {
       display: inline-block;
