--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,14 +1,14 @@
 .hero {
-  background-image: url(../../../public/images/bg/bg-2.jpg);
+  // background-image: url(../../../public/images/bg/bg-2.jpg);
   background-size: cover;
-  height: calc(100vh - 25px);
+  height: 100vh;
   position: relative;
 
   &__video {
     width: 100%;
     &-wrapper {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       overflow: hidden;
       position: absolute;
       &::after {
@@ -35,11 +35,12 @@
   }
   &__img {
     padding-left: 5%;
-    z-index: 100;
+    z-index: 9;
   }
   &__content {
     width: 70%;
     text-align: center;
+    z-index: 1;
     &-title {
       font-family: $second-font;
       text-transform: capitalize;
@@ -79,18 +80,11 @@
     }
   }
 }
-.map {
-  padding: 50px 0 150px;
-  iframe {
-    width: 100%;
-  }
-}
 
 @media (max-width: 992px) {
   .hero {
-    height: 66vh;
     &__wrapper {
-      padding: 140px 0 0;
+      padding: 0;
     }
     &__img {
       img {
@@ -111,17 +105,19 @@
 }
 @media (max-width: 768px) {
   .hero {
-    &__wrapper {
-      padding: 60px 0 0;
-    }
     &__inner {
       flex-direction: column;
       align-items: center;
       justify-content: start;
     }
-    &__img img {
-      width: 60%;
+
+    &__img {
+      text-align: center;
+      img {
+        width: 60%;
+      }
     }
+
     &__content {
       &-title {
         font-size: 22px;
@@ -144,14 +140,17 @@
 }
 @media (max-width: 576px) {
   .hero {
+    height: 60vh;
     &__wrapper {
-      padding: 40px 0 0;
+      align-items: start;
     }
     &__img {
+      display: none;
       padding-left: 0;
       width: 40%;
     }
     &__content {
+      padding-top: 150px;
       &-title {
         font-size: 20px;
       }
@@ -160,7 +159,7 @@
       }
     }
     &__card {
-      width: 80px;
+      width: 20vw;
       &-wrapper {
         padding: 10px;
       }
@@ -170,6 +169,17 @@
       }
       p {
         font-size: 14px;
+      }
+    }
+  }
+}
+@media (max-width: 360px) {
+  .hero {
+    height: 40vh;
+    &__content {
+      padding-top: 50px;
+      &-cards {
+        // flex-wrap: wrap;
       }
     }
   }
