--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,5 +2,6 @@ $main-font: "Montserrat", sans-serif;
 $second-font: "Cormorant Upright", serif;
 $comforter-font: "Comforter", cursive;
 $main-black: #333;
-$main-gold: #c19d56;
+$main-gold-1: #c19d56;
+$main-gold: rgb(188, 127, 4);
 $main-gold-2: rgb(193, 157, 86);
