--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,5 +3,5 @@ $second-font: "Cormorant Upright", serif;
 $comforter-font: "Comforter", cursive;
 $main-black: #333;
 $main-gold-1: #c19d56;
-$main-gold: rgb(188, 127, 4);
+$main-gold: #bc7f04;
 $main-gold-2: rgb(193, 157, 86);
