--- a/src/styles/components/_cake-school.scss
+++ b/src/styles/components/_cake-school.scss
@@ -86,7 +86,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background: rgba(193, 157, 86, 0.7);
+        background: rgba(188, 127, 4, 0.7);
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         border-bottom: 1px solid rgba(193, 157, 86, 0.1);
         border-top: 1px solid rgba(193, 157, 86, 0.1);
@@ -110,7 +110,7 @@
           left: 0;
           width: 50%;
           height: 100%;
-          background: linear-gradient(to left, rgba(193, 157, 86, 0.7), transparent);
+          background: linear-gradient(to left, rgba(188, 127, 4, 0.7), transparent);
           transform: skewX(45deg) translate(0);
           transition: 0.5s;
           filter: blur(0px);
@@ -158,8 +158,7 @@
     }
     &__info {
       width: 100%;
-      padding-top: 15px;
-      padding-right: 0;
+      padding: 15px 0 50px;
       &-btn {
         align-self: center;
       }
@@ -175,14 +174,31 @@
     &__wrapper {
       flex-direction: column;
     }
+    &__info {
+      &-title {
+        font-size: 28px;
+        margin-bottom: 0;
+        img {
+          width: 50%;
+          margin-top: -20px;
+        }
+      }
+      &-desc {
+        font-size: 22px;
+      }
+      &-btn {
+        width: 50vw;
+        left: -15px;
+      }
+    }
     &__picture {
       margin: 0 auto;
       width: 80%;
     }
     &__img {
-      height: 40vh;
+      height: 30vh;
       &-alt {
-        right: -25px;
+        left: -15px;
       }
     }
   }
