--- a/src/styles/components/_catering.scss
+++ b/src/styles/components/_catering.scss
@@ -177,9 +177,22 @@
       width: 80%;
     }
     &__img {
-      height: 40vh;
+      height: 30vh;
       &-alt {
-        right: -25px;
+        right: -15px;
+      }
+    }
+    &__info {
+      &-title {
+        font-size: 28px;
+        margin-bottom: 0;
+        img {
+          width: 50%;
+          margin-top: -20px;
+        }
+      }
+      &-btn {
+        width: 50vw;
       }
     }
   }
