catering and cake baku page responsive first look

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 $main-font: "Montserrat", sans-serif;
 $second-font: "Cormorant Upright", serif;
 $comforter-font: "Comforter", cursive;
-$main-black: #333;
+$main-black: #000;
+$main-black-2: #333;
 $main-gold-1: #c19d56;
 $main-gold: #bc7f04;
 $main-gold-2: rgb(193, 157, 86);
