--- a/src/styles/pages/_cakebaku.scss
+++ b/src/styles/pages/_cakebaku.scss
@@ -1,20 +1,16 @@
 .cakebaku {
-  // width: 100%;
-  // height: 100vh;
   &__carousel {
     &-item {
       width: 100%;
       height: 100vh;
       &::after {
-        content: ""; // ::before and ::after both require content
+        content: "";
         position: absolute;
         top: 0;
         left: 0;
         bottom: 0;
         width: 100%;
         height: 100%;
-        // // background-image: linear-gradient(120deg, #eaee44, #33d0ff);
-        // background-image: url(./../../../public/images/bottom.svg);
         // background-color: rgba(128, 128, 128, 0.3);
         background-image: linear-gradient(
           to bottom,
@@ -177,6 +173,128 @@
     }
     &-item:hover img {
       transform: scale(1.05);
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .cakebaku {
+    &__carousel {
+      &-title {
+        font-size: 68px;
+      }
+    }
+    .carousel__info {
+      &-img {
+        img {
+          width: 40vw;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .cakebaku {
+    &__carousel {
+      &-title {
+        font-size: 68px;
+      }
+    }
+    .carousel__info {
+      &-img {
+        img {
+          height: 50vh;
+        }
+      }
+    }
+    &__info {
+      &-wrapper {
+        width: 80%;
+      }
+      &-title {
+        font-size: 4rem;
+        &::after {
+          bottom: -6px;
+        }
+        &::before {
+          bottom: -15px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 576px) {
+  .cakebaku {
+    &__carousel {
+      &-info {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      &-title {
+        font-size: 58px;
+        text-align: center;
+      }
+    }
+    .carousel__info {
+      &-img {
+        img {
+          width: 70vw;
+          height: 45vh;
+        }
+      }
+    }
+    &__info {
+      height: auto;
+      background-position: 20px 100px;
+      &-wrapper {
+        width: 90%;
+      }
+      &-title {
+        font-size: 4rem;
+        &::after {
+          bottom: -6px;
+        }
+        &::before {
+          bottom: -15px;
+        }
+      }
+      &-desc {
+        text-align: justify;
+      }
+    }
+    &__gallery {
+      &-item {
+        &:nth-child(7n + 1) {
+          grid-column: span 1;
+          grid-row: span 1;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 400px) {
+  .cakebaku {
+    &__carousel {
+      &-title {
+        font-size: 48px;
+      }
+    }
+    .carousel__info {
+      &-img {
+        img {
+          height: 30vh;
+        }
+      }
+    }
+    &__info {
+      &-title {
+        font-size: 3rem;
+      }
+      &-desc {
+        font-size: 15px;
+      }
     }
   }
 }
