--- a/src/styles/pages/_cakeschool.scss
+++ b/src/styles/pages/_cakeschool.scss
@@ -248,8 +248,13 @@
       &-desc {
         font-style: italic;
         font-size: 16px;
-        // padding-bottom: 10px;
       }
     }
   }
 }
+
+// @media (max-width: 576px) {
+//   .cakeschool{
+
+//   }
+// }
