--- a/src/styles/pages/_cakeschool.scss
+++ b/src/styles/pages/_cakeschool.scss
@@ -98,6 +98,8 @@
       line-height: 25px;
       &--bold {
         font-weight: 700;
+        color: $main-gold;
+        font-size: 1.1rem;
       }
     }
     &-icon--left {
@@ -253,8 +255,86 @@
   }
 }
 
-// @media (max-width: 576px) {
-//   .cakeschool{
+@media (max-width: 992px) {
+  .cakeschool {
+    &__course {
+      height: 40vh;
+      &-img {
+        height: 30vh;
+      }
+    }
+  }
+}
+@media (max-width: 768px) {
+  .cakeschool {
+    &__courses-inner {
+      display: block;
+    }
+    &__course {
+      width: 70%;
+      margin: 0 auto;
+      height: 43vh;
+      margin-bottom: 20px;
+      &-img {
+        height: 35vh;
+      }
+      &-info {
+        width: 85%;
+        left: 4%;
+      }
+    }
+  }
+}
 
-//   }
-// }
+@media (max-width: 576px) {
+  .cakeschool {
+    &__hero {
+      &-title {
+        font-size: 16vw;
+      }
+    }
+    &__courses {
+      &-info {
+        font-size: 14px;
+      }
+    }
+
+    &__course {
+      width: 90%;
+      height: 40vh;
+      &-img {
+        height: 33vh;
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .cakeschool {
+    &__course {
+      &-info {
+        left: 5%;
+        width: 80%;
+        padding: 10px 15px;
+      }
+      &-title {
+        font-size: 14px;
+      }
+      &-desc {
+        font-size: 12px;
+      }
+    }
+  }
+}
+
+@media (max-width: 290px) {
+  .cakeschool {
+    &__course {
+      &-info {
+        left: 5%;
+        width: 75%;
+        padding: 10px 15px;
+      }
+    }
+  }
+}
