preloader first look

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
 @import "./styles/components/cake-school";
 @import "./styles/components/catering";
 @import "./styles/components/companies";
+@import "./styles/components/loader";
 
 // pages
 @import "./styles/pages/home";
