home page animation first look

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,6 +1,7 @@
 .about {
   background-color: #fff;
   padding: 80px 0;
+  overflow-x: hidden;
   &__wrapper {
     display: flex;
     height: 600px;
