--- a/src/styles/components/_catering.scss
+++ b/src/styles/components/_catering.scss
@@ -2,6 +2,7 @@
   background-color: $main-gold;
   margin: 50px 0;
   padding: 50px 0;
+  overflow-x: hidden;
   &__wrapper {
     display: flex;
   }
