--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,27 +1,27 @@
 .hero {
-  // background-image: url(../../../public/images/bg/bg-2.jpg);
+  background-image: url(../../../public/images/bg/bg-2.jpg);
   background-size: cover;
   height: 100vh;
   position: relative;
 
-  &__video {
-    width: 100%;
-    &-wrapper {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      position: absolute;
-      &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(255, 255, 255, 0.85);
-      }
-    }
-  }
+  // &__video {
+  //   width: 100%;
+  //   &-wrapper {
+  //     width: 100%;
+  //     height: 100%;
+  //     overflow: hidden;
+  //     position: absolute;
+  //     &::after {
+  //       content: "";
+  //       position: absolute;
+  //       top: 0;
+  //       left: 0;
+  //       width: 100%;
+  //       height: 100%;
+  //       background-color: rgba(255, 255, 255, 0.85);
+  //     }
+  //   }
+  // }
 
   &__wrapper {
     background-color: rgba(255, 255, 255, 0.85);
