--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -64,7 +64,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    color: $main-gold;
+    color: $main-black;
     font-weight: 700;
     &-wrapper {
       padding: 15px;
