--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,4 @@
 @import "./styles/pages/cakebaku";
 @import "./styles/pages/cakeschool";
 @import "./styles/pages/catering-page.scss";
+@import "./styles/pages/error";
